fix javascript on firefox + header flat img

--- a/_sass/theme/_header.scss
+++ b/_sass/theme/_header.scss
@@ -14,14 +14,24 @@
   vertical-align: middle;
   padding-top: 60px;
   color: #fff;
-  text-shadow: 2px 2px $dark_blue;
+  text-shadow: 1px 1px $dark_blue;
   h1
   {
     letter-spacing: 1px;
+    font-size: 3.0em;
   }
   h4
   {
     font-weight: 300;
     letter-spacing: 1px;
+  }
+}
+@media (min-width: 750px) {
+  .Header__Content
+  {
+    h1
+    {
+      font-size: 5.5em;
+    }
   }
 }
