--- a/_sass/theme/_section.scss
+++ b/_sass/theme/_section.scss
@@ -2,7 +2,7 @@
 {
   display: table;
   width: 100%;
-  min-height: 100vh;
+  height: 100vh;
   .Header
   {
     height: 100vh;
