--- a/_sass/theme/variables/_colors.scss
+++ b/_sass/theme/variables/_colors.scss
@@ -1,4 +1,4 @@
 $dark_blue: #171F26;
 $blue_grey: #546e7a;
 
-$primary: #00838f;
+$primary: #619EBA;
